Add OAuth app deactivation
